// AUTO-GENERATED PROTOBUF FILE. DO NOT EDIT
// Generated from Starknet JSON-RPC specification
// 
// Generation tool: https://github.com/cartridge-gg/starknet-grpc-codegen
// Generated with commit: 122730c1551d2582a99875b3b982bea8085000f8
// Specification version: 0.8.1
// Generated file: write.proto
// 
// This file contains protobuf definitions with JSON marshalling support.
// Field names preserve the exact JSON structure using json_name options.

syntax = "proto3";

package starknet.v0_8_1.write;

import "v0_8_1/common.proto";

option java_multiple_files = true;
option java_outer_classname = "StarknetProto";
option java_package = "com.starknet_v0_8_1_write";
option go_package = "github.com/cartridge-gg/starknet-grpc-codegen/go/starknet/v0_8_1/write";
option csharp_namespace = "Starknet.Starknet.V0_8_1.Write";;
option php_namespace = "Starknet\\Starknet\\V0_8_1\\Write";;

// Generated gRPC service for Starknet StarknetWriteService
service StarknetWriteService {
  // Submit a new transaction to be added to the chain
  rpc AddInvokeTransaction(AddInvokeTransactionRequest) returns (AddInvokeTransactionResponse);
  // Submit a new class declaration transaction
  rpc AddDeclareTransaction(AddDeclareTransactionRequest) returns (AddDeclareTransactionResponse);
  // Submit a new deploy account transaction
  rpc AddDeployAccountTransaction(AddDeployAccountTransactionRequest) returns (AddDeployAccountTransactionResponse);
}

