// AUTO-GENERATED PROTOBUF FILE. DO NOT EDIT
// Generated from Starknet JSON-RPC specification
// 
// Generation tool: https://github.com/cartridge-gg/starknet-grpc-codegen
// Generated with commit: 122730c1551d2582a99875b3b982bea8085000f8
// Specification version: 0.8.1
// Generated file: ws.proto
// 
// This file contains protobuf definitions with JSON marshalling support.
// Field names preserve the exact JSON structure using json_name options.

syntax = "proto3";

package starknet.v0_8_1.ws;

import "v0_8_1/common.proto";

option java_multiple_files = true;
option java_outer_classname = "StarknetProto";
option java_package = "com.starknet_v0_8_1_ws";
option go_package = "github.com/cartridge-gg/starknet-grpc-codegen/go/starknet/v0_8_1/ws";
option csharp_namespace = "Starknet.Starknet.V0_8_1.Ws";;
option php_namespace = "Starknet\\Starknet\\V0_8_1\\Ws";;

// Generated gRPC service for Starknet StarknetWsService
service StarknetWsService {
  // Creates a WebSocket stream which will fire events for new block headers
  rpc SubscribeNewHeads(SubscribeNewHeadsRequest) returns (stream SubscribeNewHeadsResponse);
  // Creates a WebSocket stream which will fire events for new Starknet events with applied filters
  rpc SubscribeEvents(SubscribeEventsRequest) returns (stream SubscribeEventsResponse);
  // Creates a WebSocket stream which at first fires an event with the current known transaction status, followed by events for every transaction status update
  rpc SubscribeTransactionStatus(SubscribeTransactionStatusRequest) returns (stream SubscribeTransactionStatusResponse);
  // Creates a WebSocket stream which will fire events when a new pending transaction is added. While there is no mempool, this notifies of transactions in the pending block
  rpc SubscribePendingTransactions(SubscribePendingTransactionsRequest) returns (stream SubscribePendingTransactionsResponse);
  // Close a previously opened ws stream, with the corresponding subscription id
  rpc Unsubscribe(UnsubscribeRequest) returns (stream UnsubscribeResponse);
}

